# llm-audio-transcription-benchmark

./: .dvcignore  .gitattributes  .gitignore  README.md  add_whisper_to_benchmark.py  benchmark.py  benchmark_manual_transcripts.py  benchmark_realtime_whisper.py  benchmark_report.json  dataset.dvc  gemma-4.json  index.html  kaggle_gemma4_local.py  manifest.json  parakeet_asr.py  pyproject.toml  requirements.txt  whisper.sh
.dvc/: config
dataset/ami/: EN2002a.gem_3_1_pro.txt  EN2002a.gem_3_flash_pre.txt  EN2002a.trans.txt  EN2002a.whisper.txt  EN2002a.whisper_turbo.txt  TS3003d.gem_3_1_pro.txt  TS3003d.gem_3_flash_pre.txt  TS3003d.trans.txt  TS3003d.whisper.txt  TS3003d.whisper_large.txt  TS3003d.whisper_turbo.txt
dataset/chime-6/: audio_1.gem_3_1_pro.txt  audio_1.gem_3_flash_pre.txt  audio_1.trans.txt  audio_1.whisper_turbo.txt  audio_2.gem_3_1_pro.txt  audio_2.whisper_large.txt  audio_2.whisper_turbo.txt
dataset/fleurs/: multilingual_1.gem_3_1_pro.txt  multilingual_1.gem_3_flash_pre.txt  multilingual_1.trans.txt  multilingual_1.whisper.txt  multilingual_1.whisper_large.txt  multilingual_1.whisper_turbo.txt  multilingual_2.gem_3_1_pro.txt  multilingual_2.gem_3_flash_pre.txt  multilingual_2.trans.txt  multilingual_2.whisper.txt  multilingual_2.whisper_large.txt  multilingual_2.whisper_turbo.txt  trans.txt
dataset/fleurs-noise/: en_us.trans.txt  en_us.whisper_turbo.txt
dataset/librispeech-clean/: 5639-40744-0031.flac  5639-40744-0031.whisper.txt  6829-68769-0000.flac  6829-68769-0000.whisper.txt
dataset/librispeech-noise/: 196-122150.txt  (+2 more)
scripts/: add_noise.py
(+36 files in other folders)
