[project]
name = "llm-audio-transcription-benchmark-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai==1.73.1",
    "jiwer==4.0.0",
    "openai==2.33.0",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "tqdm==4.67.3",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
]
